stepper motor stuff

--- a/InitialDocument.tex
+++ b/InitialDocument.tex
@@ -10,6 +10,7 @@
 \usepackage{tabu}
 \usepackage{upgreek}
 \usepackage{multirow}
+\usepackage{amsmath}
 \hypersetup{
     colorlinks=true,
     linkcolor=black,
