--- a/research/part-selection.tex
+++ b/research/part-selection.tex
@@ -386,7 +386,7 @@ From the datasheets of each voltage regulator we were able to make the compariso
 		\hline
 		\textbf{Operating Temp} & 0$^{\circ}$C - 125$^{\circ}$C & 0$^{\circ}$C - 125$^{\circ}$C  &  -40$^{\circ}$C - 125$^{\circ}$C & -40$^{\circ}$C - 125$^{\circ}$C \\
 		\hline
-		\textbf{Efficiency} & ~62\% & Varies & 75\% & 73\% \\ 
+		\textbf{Efficiency} & $\leq$62\% & Varies & 75\% & 73\% \\ 
 		\hline
 		\textbf{Frequency} & N/A & N/A & 53kHz & 150kHz \\
 		\hline
