Added images to pdf, added better block diagram

--- a/design-details/sensing.tex
+++ b/design-details/sensing.tex
@@ -6,7 +6,20 @@
 \end{figure}
 
 
-The purpose of the Sensing subsystem is to generate a spectrograph of the soil through data delivered to the MCU. Then the MCU will interpret the wavelengths by measuring the amplitude of the signal at several key frequencies. This will determine whether the MCU will proceed to engage the Power and Web subsystems to modify the environment of the plant.
+The sensing subsystem is an infrared spectrometer that uses two photodiodes as detectors, a diffraction grating as a spectral separator, an array of LEDs to illuminate the target area, and optics to collect, collimate, and focus the beam.
+
+
+\begin{figure}[H]
+    \caption{Diffraction angle calculation}
+    \centering
+    \includegraphics[width=\textwidth]{images/DiffractionAngleCalculator.png}
+\end{figure}
+
+\begin{figure}[H]
+    \caption{Photodiode Signal Filter}
+    \centering
+    \includegraphics[width=\textwidth]{images/ColimatedBeam.png}
+\end{figure}
 
 
 \begin{figure}[H]
