Optical Design section

--- a/admin-content/finance.tex
+++ b/admin-content/finance.tex
@@ -16,7 +16,7 @@
         \hline
         Power & \$200 & Solar panels, batteries, control system \\
         \hline
-        Sensing & \$100 & Components for sensing, optical sensors \\
+        Sensing & \$200 & Components for sensing, optical sensors \\ % Changed 2022-11-18 by Scott
         \hline
         Web & \$30 & Web service pricing \\             % Changed 2022-09-29 by Brendan
         \hline
