--- a/research/part-selection.tex
+++ b/research/part-selection.tex
@@ -325,8 +325,7 @@ The spectrometer will consist of several optical, electrical and mechanical comp
         \item LED Diode Array
     \end{itemize}
 
-	Silicon Photodiode
-
+	\paragraph{Silicon Photodiode}
 
 	The silicon photodiode will be one of the two detectors in the system, responsible for covering the visible spectrum of the soil emissions. Silicon photodiodes are cheap and overdeveloped for this application, much of the marketing emphasizes high speed current rise times and low dark current. Our spectrometer will not require either. Instead, it will be useful to have a detector with large surface area. This will reduce the precision required of other optical elements in the system, while retaining the flexibility to reduce the active area of the detector with a small aperture if needed. As always, low cost will be favored.
 
@@ -357,7 +356,7 @@ The spectrometer will consist of several optical, electrical and mechanical comp
 
 The BPX 61 by Newark has a substantially better size to cost ratio than other relevant devices on the market, however it also has a higher ambient current than all others. One option is to select it and then compensate by investing in more LEDs to illuminate the target area and boost the signal up over the higher dark current, or by investing in more circuitry to clean up and boost the signal. Another option is to forgo the larger surface area and choose the sensor with the least ambient noise, Thorlabs’ FD11A. There don’t appear to be any standout choices aside from those two. All the other devices make compromises between their specs, while these two have standout specs, but require compromises in design. The BPX 61 offers the greatest flexibility, so it’s our choice for the visible-spectrum photodiode.
 
-Near Infrared Spectrum InGaAs Photodiode
+\paragraph{Near Infrared Spectrum InGaAs Photodiode}
 
 The NIR InGaAs photodiode is responsible for detecting the majority of the spectral area of interest in this soil spectrometer. Once again, the relevant specs are active area, cost, and dark current. Most NIR photodetectors are designed for highspeed free space optical communication, but this application very forgiving in terms of sensor speeds. 
 
@@ -391,7 +390,7 @@ The NIR InGaAs photodiode is responsible for detecting the majority of the spect
 
 The Advanced Photonix 0800-3111-011, distributed by Digikey has the highest active area, the second lowest cost, and an acceptable midrange dark current. This makes it the obvious choice for the system’s NIR detector.
 
-Linear Stage Actuator Carriage Rail
+\paragraph{Linear Stage Actuator Carriage Rail}
 
 There are several methods of detecting broad spectral regimes. Scanning is much more viable than staring in this case, since staring detection requires an array of detectors. This system is intended to keep costs low for the target user, and detectors are a disproportionately expensive part. Instead, this system will have a pair of detectors mounted on a carriage which will pass through the spatially separated beams of light. There are several important criteria for this part. It must be able to take small, precise, increment steps in order for the detectors to capture the soil emission with high resolution. It must have sufficient range of motion to cover the whole spectral range, from 400nm to 1700nm. And it must meet the size, weight, and power constraints imposed by the rest of the system. 
 
@@ -418,7 +417,7 @@ There are several methods of detecting broad spectral regimes. Scanning is much 
 The ratio between the stroke length and step size needs to be well above 1,500 in order to meet the criterion for spectral resolution. Luckily, the product with the least range is well over that limit, at 10,000:1. That allows cost to become the driving factor. The T0601-50, distributed by Rattmmotor, is just over half the price of the next cheapest option. This is the group’s choice of scanner
 
 
-Reflective Diffraction Grating
+\paragraph{Reflective Diffraction Grating}
 
 Diffraction is the operating principle behind the spectrometer. The soil emissions will be composed of different wavelengths representing the chemical structure of the soil, and this will be increased under illumination and then separated by diffraction. A diffraction grating separates incident electromagnetic waves of different frequencies by confining them into a tightly bounded region on reflection or transmission. This confinement causes the waves to disperse, like a prism would, with waves of higher frequencies experiencing greater dispersion. Transmission gratings will not be very effective for weak signal diffraction, as in this application, because most of the optical power is concentrated straight through and not separated at all, with only weaker orders fully separating. Reflective diffraction gratings will provide the best efficiency for soil spectroscopy. In order to prevent the beam from diffracting so far that it reflects straight back into itself, where it cannot be collected, it will be necessary to acquire a diffraction grating with grooves which are blazed at an angle, so that the surface normal of the grating has a greater angle than 90 degrees. The blaze angle corresponding to the 1000 nm diffraction regime will suffice. Next, it will be necessary to calculate the angular spread of diffraction from 400nm to 1700nm off a diffraction grating from several incident angles. The first order diffraction must not overlap with the incident beam if it is to be measured. Increased size is also desirable, in order to maximize the number of wave-groove interactions and boost diffraction efficiency. 
 
@@ -450,10 +449,10 @@ Diffraction is the operating principle behind the spectrometer. The soil emissio
 The spectral regime is too wide to be able to reliably use a 600 nm grating without losing information in the infrared. Unfortunately, efficiency is not a variable that can be compared from product to product, since it varies with wavelength and per polarization. This means the only remaining comparison is the ratio from cost to active area. ScienceTech can be ruled out immediately. Its cost to size ratio is not far from the other 1200 nm gratings on this list, but it would be difficult to justify doubling the project budget in order to achieve a marginal increase in grating power efficiency. This spec can also be compensated by cranking up the optical power probing the soil, presumably for less than the \textdollar45 difference between the Edmund Optics and Thorlabs models.
 
 
-Focusing Optic (placeholder)
+\paragraph{Focusing Optic (placeholder)}
 
 Fiber Patch Cable with attached Collimator (placeholder)
 
-LED Diode Array (placeholder)
+\paragraph{LED Diode Array (placeholder)}
 
 
