--- a/testing/sensing-testing.tex
+++ b/testing/sensing-testing.tex
@@ -1,2 +1,19 @@
 \subsection{Sensing Subsystem Testing}
 \label{sec:sensing_subsystem_testing}
+
+
+There are three components in the Sensing subsystem that will require testing on arrival.
+\begin{itemize}
+    \item The Diffraction Grating
+    \item The Optical Sensors
+    \item The Linear Actuator
+\end{itemize}
+
+
+\paragraph{} The diffraction grating will be tested for efficiency and for line spacing. This will also determine if the blaze angle is correctly labeled.
+
+
+\paragraph{} The photodiodes will be connected to circuitry and placed under beams to validate their responsivity curves and dark current.
+
+
+\paragraph{} The linear actuator will be tested to ensure it responds properly to the specified voltage and current inputs and to ensure that it runs at the proper speed. Then the actuator will be tested to determine if the incremental steps are of the proper length.
