--- a/research/part-selection.tex
+++ b/research/part-selection.tex
@@ -394,7 +394,7 @@ From the datasheets of each voltage regulator we were able to make the compariso
 		\hline
 	\end{tabularx}
 \end{table}
-Through comparison, it was agreed upon to select the LM317 (linear) and the LM2576 (switching) because of what was given to us by the datasheets. These were also selected so that we can observe and comapre them even further to see which one will perform the best and be a good fit for our model.\par
+Through comparison, it was agreed upon to select the LM317 (linear) and the LM2576 (switching) because of what was given to us by the datasheets. These were also selected so that we can observe and compare them even further to see which one will perform the best and be a good fit for our model.\par
 \subsubsection{Sensing Subsystem}
 The required sensing subsystem capabilities include:
     \begin{itemize}
